@@ -36,7 +36,7 @@ module ActiveMerchant #:nodoc:
       self.live_url = 'https://www.myvirtualmerchant.com/VirtualMerchant/process.do'
 
       self.display_name = 'Elavon MyVirtualMerchant'
-      self.supported_countries = ['US', 'CA']
+      self.supported_countries = %w(US CA PR DE IE NO PL LU BE NL)
       self.supported_cardtypes = [:visa, :master, :american_express, :discover]
       self.homepage_url = 'http://www.elavon.com/'
 
